crates/tui/snapshots/inline/frame/approval_restored_after_panel.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: frame
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
┌Approval required───────────────────────────────┐
│Run the requested command?                      │
│Process spawn  ·  cargo test                    │
│> Approve once                                  │
│  Decline                                       │
│                                                │
└────────────────────────────────────────────────┘
                                                  
  Enter to confirm
