crates/tui/snapshots/inline/frame/config_closed.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 100, 32))"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ⏸ Manual · ← Dashboard · ? for shortcuts
