crates/tui/snapshots/inline/frame/config_scrolled_to_screen_mode.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: text(&scrolled)
---
─ Config ───────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   General    Providers    Issues    Network                                                        
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search configuration                                                                         │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  5 more above                                                                                      
  Language                                                                               English    
  Status bar style                                                                        Simple +  
  Key hint style                                                                        Contrast    
> Screen mode                                                                             inline    
  7 more below                                                                                      
                                                                                                    
  Enter change · r reset · Tab tabs · / search · Esc close
