crates/tui/snapshots/inline/frame/dictation_preparation.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: text(&buffer)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Dictation · checking model files · ctrl+c to stop dictation                   
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
