crates/tui/snapshots/inline/frame/hooks_inline_detail_scrolled.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 48, 14))"
---
─ Hooks › user:hook:check ──────────────────────
                                                
  Program:     /project with                    
  spaces/scripts/validate-changes.py            
  Arguments:                                    
  ["--require-review-before-running-tools","--  
  project=/long/path/to/current/project","--co  
  nfiguration-from=/long/path/to/.ash/config.t  
  oml"]                                         
                                                
> Edit configuration                            
  Ask Ash to configure                          
                                                
  Enter confirm · Esc return
