crates/tui/snapshots/inline/frame/inline_running_tip_after_language_change.snap
---
source: crates/tui/src/app/inline/frame_tests.rs
expression: localized
---
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
⠋ 正在处理... · 9s · esc 可中断                                                                                                             
 └─ 技巧：复杂任务可以请 Ash 先列出步骤                                                                                                     
                                                                                                                                            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                                                           
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                            
  ⏸ 手动 · ← 仪表盘 · ? 查看快捷键
